--- a/arxiki.html
+++ b/arxiki.html
@@ -1,1 +1,16 @@
-
+<!DOCKTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title> Αρχική </title>
+  </head>
+  <body>
+    <p> 1ο μέλος: </p>
+    <ul>
+      <li> Όνομα: Ελευθερία </li>
+      <li> Επίθετο: Εξίζογλου </li>
+      <li> Τόπος καταγωγής: Θεσσαλονίκη </li>
+      <li> Εθνικότητα: Γύφτισσα </li>
+      <li> Κατάσταση: Περίεργη </li>
+      <li> Ομορφιά: ΑΠΕΡΊΓΡΑΠΤΗ </li>
+      
