--- a/arxiki.html
+++ b/arxiki.html
@@ -24,5 +24,7 @@
       <li> Γλώσσες προγραμματισμού: C++, Java, HTML </li>
     </ul>
    
-          
+          <img src="ergasia/veroia.jpg">
+  
+      
   
