--- a/arxiki.html
+++ b/arxiki.html
@@ -26,6 +26,9 @@
    
           <img src="ergasia/veroia.jpg">
           <img src="ergasia/images.jpg">
+  </body>  
+</html>
+
       
   
       
