--- a/arxiki.html
+++ b/arxiki.html
@@ -24,8 +24,8 @@
       <li> Γλώσσες προγραμματισμού: C++, Java, HTML </li>
     </ul>
    
-          <img src="ergasia/veroia.jpg">
-          <img src="ergasia/images.jpg">
+          <img src="veroia.jpg">
+          <img src="images.jpg">
   </body>  
 </html>
 
