--- a/arxiki.html
+++ b/arxiki.html
@@ -24,8 +24,9 @@
       <li> Γλώσσες προγραμματισμού: C++, Java, HTML </li>
     </ul>
    
-          <img src="veroia.jpg">
-          <img src="images.jpg">
+         <img src="/image/veroia.jpg">
+         <img src="/image/thessaloniki.jpg">
+  
   </body>  
 </html>
 
