--- a/project.html
+++ b/project.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title> Πρότζεκτ </title>
+  </head>
+  <body>
+    <h3> Πρότζεκτ της εταιρίας μας </h3> <hr>
+    <p> Η εταιρία μας, <b> REIA </b>, έχει δημιουργήσει μια εφαρμογή, <u> πρώτη στις πωλήσεις </u>,
+      η οποία μπορεί να σου βρει το άλλο σου μισό παγκοσμίως και μπορεί να σου κανονίσει συνάντηση
+      με αυτό το άτομο σε μία χώρα της επιλογής σας, έχοντας τα περισσότερα έξοδα πληρωμένα!! Η
+      εφαρμογή αυτή έχει δώσει την ευκαιρία σε πολλά άτομα να αισθανθούν το μοναδικό συναίσθημα του
+      έρωτα, που κάποιοι μπορεί να μην το έχουν νιώσει ποτέ! </p>
+  </body>
+</html>
