--- a/arxiki.html
+++ b/arxiki.html
@@ -24,8 +24,8 @@
       <li> Γλώσσες προγραμματισμού: C++, Java, HTML </li>
     </ul>
    
-         <img src="ergasia/image/thessaloniki.jpg">
-         <img src="ergasia/image/veroia.jpg">
+         <img src="image/thessaloniki.jpg">
+         <img src="image/veroia.jpg">
   
   </body>  
 </html>
