--- a/arxiki.html
+++ b/arxiki.html
@@ -24,7 +24,7 @@
       <li> Γλώσσες προγραμματισμού: C++, Java, HTML </li>
     </ul>
    
-         <img src="image/thessaloniki.jpg">
+         <img src="image/thessaloniki.jpg" style="width:500px;height:600px;">
          <img src="image/veroia.jpg">
   
   </body>  
