--- a/arxiki.html
+++ b/arxiki.html
@@ -25,7 +25,7 @@
     </ul>
    
          <img src="image/thessaloniki.jpg" style="width:500px;height:600px;">
-         <img src="image/veroia.jpg">
+         <img src="image/veroia.jpg" style="width:200px;">
   
   </body>  
 </html>
