--- a/arxiki.html
+++ b/arxiki.html
@@ -25,7 +25,7 @@
     </ul>
    
          <img src="image/thessaloniki.jpg" style="width:300px;height:200px;">
-         <img src="image/veroia.jpg" style="width:200px;">
+         <img src="image/veroia.jpg" style="width:300px; height:200;">
   
   </body>  
 </html>
