--- a/arxiki.html
+++ b/arxiki.html
@@ -7,7 +7,7 @@
   <body>
     <p> 1ο μέλος: </p>
     
-    <img src="image/ria.jpg" style="width:100px; height:100;">
+    <img src="image/ria.jpg" style="width:100px; height:100px;">
     <ul>
       <li> Όνομα: Ελευθερία </li></li>
       <li> Επίθετο: Εξίζογλου </li>
@@ -24,7 +24,7 @@
     
     <p> 2ο μέλος : </p>
   
-  <img src="image/eiri.jpg" style="width:300px; height:200;">
+  <img src="image/eiri.jpg" style="width:300px; height:200px;">
     <ul>
       <li> Όνομα : Ειρήνη </li>
       <li> Επίθετο : Κυνηγοπούλου </li
@@ -34,7 +34,7 @@
     </ul>
    
     <a href= "https://el.wikipedia.org/wiki/%CE%92%CE%AD%CF%81%CE%BF%CE%B9%CE%B1">
-      <img src="image/veroia.jpg" style="width:300px; height:300;">
+      <img src="image/veroia.jpg" style="width:300px; height:300px;">
      </a>
   
   
