--- a/project.html
+++ b/project.html
@@ -5,10 +5,10 @@
     <title> Πρότζεκτ </title>
    </head>  
   <style>
-       body {  background-color: pink;}
+       body {  background-color: #ff4d88;}
       
       p  {
-             color: black;
+             color: white;
              font-family: courier;
              
          }
