--- a/project.html
+++ b/project.html
@@ -21,7 +21,7 @@
     </style>
   
     <body>  
-    <h3> Πρότζεκτ της εταιρίας μας </h3> <hr>
+    <h3 style="text-align:center;"> Πρότζεκτ της εταιρίας μας </h3> <hr>
       
     <p> Η εταιρία μας, <b> REIA </b>, έχει δημιουργήσει μια εφαρμογή, <u> πρώτη στις πωλήσεις </u>,
       η οποία μπορεί να σου βρει το άλλο σου μισό παγκοσμίως και μπορεί να σου κανονίσει συνάντηση
