--- a/project.html
+++ b/project.html
@@ -10,6 +10,9 @@
       p  {
              color: white;
              font-family: courier;
+             border-style: double;
+             border-width: medium;
+             border-radius: 20%;
              
          }
       
