--- a/project.html
+++ b/project.html
@@ -10,9 +10,9 @@
       p  {
              color: white;
              font-family: courier;
-             border-style: double;
+             border-style: solid;
              border-width: medium;
-             border-radius: 60%;
+             border-radius: 10%;
              
          }
       
