--- a/arxiki.html
+++ b/arxiki.html
@@ -34,12 +34,12 @@
     </ul>
    
     <a href= "https://el.wikipedia.org/wiki/%CE%92%CE%AD%CF%81%CE%BF%CE%B9%CE%B1">
-      <img src="image/veroia.jpg" style="width:300px; height:300px;">
+      <img src="image/veroia.jpg">
      </a>
   
   
   <p> 1ο και 2ο μέλος </p>
-  <img src="image/reia.jpg" style="width:200px; height:100;">
+  <img src="image/reia.jpg" style="width:300px; height:200px;">
   
   </body>  
 </html>
