--- a/arxiki.html
+++ b/arxiki.html
@@ -39,7 +39,7 @@
   
   
   <p> 1ο και 2ο μέλος </p>
-  <img src="image/reia.jpg" style="width:200px; height:300px;">
+  <img src="image/reia.jpg">
   
   </body>  
 </html>
