--- a/arxiki.html
+++ b/arxiki.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <title> Αρχική </title>
   </head>
-  <body>
+  <style>
+       body {  background-color: #e6ccff;}
+  </style>
+  <body style="text-align:center;">
     <p> 1ο μέλος: </p>
     
     <img src="image/ria.jpg" style="width:150px; height:180px;">
