--- a/arxiki.html
+++ b/arxiki.html
@@ -6,12 +6,13 @@
   </head>
   <style>
        body {  background-color: #e6ccff;}
+       ul   {  style="text-align:center;"}
   </style>
   <body style="text-align:center;">
     <p> <b> 1ο μέλος: </b> </p>
     
     <img src="image/ria.jpg" style="width:150px; height:180px;">
-    <ul>
+    <ul style="text-align:center;">
       <li> Όνομα: Ελευθερία </li>
       <li> Επίθετο: Εξίζογλου </li>
       <li> Τόπος καταγωγής: Θεσσαλονίκη </li>
@@ -28,7 +29,7 @@
   <p> <b> 2ο μέλος : </b> </p>
   
   <img src="image/eiri.jpg" style="width:150px; height:180px;">
-    <ul>
+    <ul style="text-align:center;">
       <li> Όνομα : Ειρήνη </li>
       <li> Επίθετο : Κυνηγοπούλου </li
       <li> Τόπος  καταγωγής : Βέροια </li>
