--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@ input[type=text], select, textarea {
 }
   
 input[type=submit] {
-  background-color: #00ff00;
+  background-color:#ff794d;
   color: white;
   padding: 12px 20px;
   border: none;
@@ -32,7 +32,7 @@ input[type=submit] {
 }
   
 input[type=submit]:hover {
-background-color: #45a049;
+background-color: #e63900;
 }
   
  /* Style the container/contact section */
