--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>ΕΠΙΚΟΙΝΩΝΙΑ</title>
+    <title>Επικοινωνία</title>
   </head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
