--- a/arxiki.html
+++ b/arxiki.html
@@ -7,7 +7,7 @@
   <style>
        body {  background-color: #e6ccff; 
        text-align:center;}
-    ul{text-align:center;}
+    li{text-align:center;}
   </style>
   <body>
     
