--- a/arxiki.html
+++ b/arxiki.html
@@ -14,7 +14,7 @@
     <p> <b> 1ο μέλος: </b> </p>
     
     <img src="image/ria.jpg" style="width:150px; height:180px;">
-    <ul>
+    <ul style="center";>
       <li> Όνομα: Ελευθερία </li>
       <li> Επίθετο: Εξίζογλου </li>
       <li> Τόπος καταγωγής: Θεσσαλονίκη </li>
