--- a/CV.html
+++ b/CV.html
@@ -18,4 +18,7 @@
       c++, java. Επίσης έχω κάνει erasmus στην Τσεχία. </p> </li>
     
   
-    
+    <p><b><i> 1ο μέλος: </i></b></p>
+  <ul style="list-style-type:square;">
+    <li> <p> Ονομάζομαι Ειρήνη-Χρυσοβαλάντου Κυνηγοπούλου, κατάγομαι από την Βέροια και είμαι 20
+      χρονών. Έχω 
