--- a/CV.html
+++ b/CV.html
@@ -21,4 +21,9 @@
     <p><b><i> 1ο μέλος: </i></b></p>
   <ul style="list-style-type:square;">
     <li> <p> Ονομάζομαι Ειρήνη-Χρυσοβαλάντου Κυνηγοπούλου, κατάγομαι από την Βέροια και είμαι 20
-      χρονών. Έχω 
+      χρονών. Έχω δύο μεγαλύτερες αδερφές και μία πολύ τρελή, δεμένη οικογένεια. Μου αρέσουν
+      οι μονόκεροι, ο Χάρι Πόττερ, οι σειρές, να περνάω χρόνο με την Ria, η πίτσα, τα γλυκά, 
+      οι παχουλές γάτες και να πηγαίνω βόλτα στο δάσος. Στον ελεύθερό μου χρόνο παίζω ντοντ
+      με την Ria. </p> </li>
+    
+    <li> <p> Έχω γνώση στις εξής γλώσσες προγραμματισμού: python, html, css, c++, java. </p> </li>
