--- a/arxiki.html
+++ b/arxiki.html
@@ -60,7 +60,7 @@
   
   <img src="image/eiri.jpg" style="width:150px; height:180px;">
     <ul>
-      <li> Όνομα : Ειρήνη </li>
+      <li> Όνομα : Ειρήνη-Χρυσοβαλάντου </li>
       <li> Επίθετο : Κυνηγοπούλου </li
       <li> Τόπος  καταγωγής : Βέροια </li>
       <li> ΑΕΜ : 4210 </li>
