--- a/arxiki.html
+++ b/arxiki.html
@@ -41,9 +41,9 @@
     
     <ul>
       <li><a class="active" href="#home">Αρχική</a></li>
-      <li><a href="#news">Πρότζεκ</a></li>
-      <li><a href="#contact">Επικοινωνία</a></li>
-      <li><a href="#about">Βιογραφικό</a></li>
+      <li><a href="project.html">Πρότζεκ</a></li>
+      <li><a href="contact.html">Επικοινωνία</a></li>
+      <li><a href="#CV.html">Βιογραφικό</a></li>
     </ul>
     
     <p> <b> 1ο μέλος: </b> </p>
