--- a/contact.html
+++ b/contact.html
@@ -65,17 +65,17 @@ background-color: #e63900;
   <div class="row">
     <div class="column">
       <form action="/action_page.php">
-        <label for="fname">First Name</label>
+        <label for="fname">;Όνομα</label>
         <input type="text" id="fname" name="firstname" placeholder="Your name..">
-        <label for="lname">Last Name</label>
+        <label for="lname">Επώνυμο</label>
         <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-        <label for="city">City</label>
+        <label for="city">Πόλη</label>
         <select id="city" name="city">
           <option value="Kavala">Kavala</option>
           <option value="Thessaloniki">Thessaloniki</option>
           <option value="Veroia">Veroia</option>
         </select>
-        <label for="subject">Subject</label>
+        <label for="subject">Σχόλια</label>
         <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
         <input type="submit" value="Submit">
       </form>
