--- a/contact.html
+++ b/contact.html
@@ -65,15 +65,15 @@ background-color: #e63900;
   <div class="row">
     <div class="column">
       <form action="/action_page.php">
-        <label for="fname">;Όνομα</label>
+        <label for="fname">Όνομα</label>
         <input type="text" id="fname" name="firstname" placeholder="Your name..">
         <label for="lname">Επώνυμο</label>
         <input type="text" id="lname" name="lastname" placeholder="Your last name..">
         <label for="city">Πόλη</label>
         <select id="city" name="city">
-          <option value="Kavala">Kavala</option>
-          <option value="Thessaloniki">Thessaloniki</option>
-          <option value="Veroia">Veroia</option>
+          <option value="Kavala">Καβάλα</option>
+          <option value="Thessaloniki">Θεσσαλονίκη</option>
+          <option value="Veroia">Βέροια</option>
         </select>
         <label for="subject">Σχόλια</label>
         <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
