--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@ background-color: #e63900;
  <body>
 <div class="container">
   <div style="text-align:center">
-    <h2>Contact Us</h2>
+    <h2>Επικοινωνία</h2>
   </div>
   <div class="row">
     <div class="column">
