--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
+    <meta charset="UTF-8">
     <title>Επικοινωνία</title>
   </head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
