--- a/arxiki.html
+++ b/arxiki.html
@@ -41,10 +41,10 @@
   <body>
     
     <ul class="menu">
-      <li><a class="active" href="#home">Αρχική</a></li>
-      <li><a href="project.html">Πρότζεκ</a></li>
-      <li><a href="contact.html">Επικοινωνία</a></li>
-      <li><a href="CV.html">Βιογραφικό</a></li>
+      <li class="menu"><a class="active" href="#home">Αρχική</a></li>
+      <li class="menu"><a href="project.html">Πρότζεκ</a></li>
+      <li class="menu"><a href="contact.html">Επικοινωνία</a></li>
+      <li class="menu"><a href="CV.html">Βιογραφικό</a></li>
     </ul>
     
     <p> <b> 1ο μέλος: </b> </p>
