--- a/arxiki.html
+++ b/arxiki.html
@@ -20,7 +20,7 @@
            text-align:center;
       }
 
-   li .menu a {
+   li a .menu{
             display: block;
             color: white;
             text-align: center;
@@ -28,7 +28,7 @@
             text-decoration: none;
          } 
 
-  li .menu a:hover {
+  li a:hover .menu {
                 background-color: #111;
               }
 
@@ -41,10 +41,10 @@
   <body>
     
     <ul class="menu">
-      <li class="menu"><a class="active" href="#home">Αρχική</a></li>
-      <li class="menu"><a href="project.html">Πρότζεκ</a></li>
-      <li class="menu"><a href="contact.html">Επικοινωνία</a></li>
-      <li class="menu"><a href="CV.html">Βιογραφικό</a></li>
+      <li class="menu"><a class="active menu" href="#home">Αρχική</a></li>
+      <li class="menu"><a class="menu" href="project.html">Πρότζεκ</a></li>
+      <li class="menu"><a class="menu" href="contact.html">Επικοινωνία</a></li>
+      <li class="menu"><a class="menu" href="CV.html">Βιογραφικό</a></li>
     </ul>
     
     <p> <b> 1ο μέλος: </b> </p>
