--- a/arxiki.html
+++ b/arxiki.html
@@ -10,10 +10,10 @@
   <body>
     
     <div class="menu">
-      <a href="arxiki.html">Αρχική</a>
-      <a href="project.html">Project</a>
-      <a href="CV.html">Βιογραφικό</a>
-      <a href="contact.html">Επικοινωνία</a>
+      <a class="menu" href="arxiki.html">Αρχική</a>
+      <a class="menu" href="project.html">Project</a>
+      <a class="menu" href="CV.html">Βιογραφικό</a>
+      <a class="menu" href="contact.html">Επικοινωνία</a>
     </div>
       
     <div class="main">
