--- a/CV.html
+++ b/CV.html
@@ -2,9 +2,19 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Βιογραφικό</title>
+    <title> Βιοφραφικό </title>
+    <link rel="stylesheet"  type="text/css" href="style.css">
   </head>
-<body>
+ 
+  
+  <body>
+    
+    <div class="menu">
+      <a class="menu" href="arxiki.html">Αρχική</a>
+      <a class="menu" href="project.html">Project</a>
+      <a class="menu" href="CV.html">Βιογραφικό</a>
+      <a class="menu" href="contact.html">Επικοινωνία</a>
+    </div>
   
   <p><b><i> 1ο μέλος: </i></b></p>
   <ul style="list-style-type:square;">
