--- a/contact.html
+++ b/contact.html
@@ -1,64 +1,20 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Επικοινωνία</title>
+    <title> Επικοινωνία </title>
+    <link rel="stylesheet"  type="text/css" href="style.css">
   </head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-  body {
-          font-family: Arial, Helvetica, sans-serif;
-        }
+ 
   
-  * { 
-         box-sizing: border-box; 
-     }
-  
-/* Style inputs */
-input[type=text], select, textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  margin-top: 6px;
-  margin-bottom: 16px;
-  resize: vertical;
-}
-  
-input[type=submit] {
-  background-color:#ff794d;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  cursor: pointer;
-}
-  
-input[type=submit]:hover {
-background-color: #e63900;
-}
-  
- /* Style the container/contact section */
-.container {
-  border-radius: 10px;
-  background-color: #f2f2f2;
-  padding: 10px;
-}
-  
-/* Create two columns that float next to eachother */
-.column {
-  float: left;
-  width: 50%;
-  margin-top: 6px;
-  padding: 20px;
-}
-  
- /* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-  </style>
- <body>
+  <body>
+    
+    <div class="menu">
+      <a class="menu" href="arxiki.html">Αρχική</a>
+      <a class="menu" href="project.html">Project</a>
+      <a class="menu" href="CV.html">Βιογραφικό</a>
+      <a class="menu" href="contact.html">Επικοινωνία</a>
+    </div>
 <div class="container">
   <div style="text-align:center">
     <h2>Επικοινωνία</h2>
