--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
       <a class="menu" href="contact.html">Επικοινωνία</a>
     </div>
 <div class="container">
-  <div style="text-align:center">
+  <div class="main-contact">
     <h2>Επικοινωνία</h2>
   </div>
   <div class="row">
@@ -37,6 +37,7 @@
         <input type="submit" value="Submit">
       </form>
     </div>
+   </div>
   </div>
   
  </body>
