--- a/arxiki.html
+++ b/arxiki.html
@@ -36,7 +36,7 @@
      
       <p> <b> 2ο μέλος : </b> </p>
   
-      <img class="vertical" src="image/eiri.jpg">
+      <img id="vertical" src="image/eiri.jpg">
     
       <ul>
         <li> Όνομα : Ειρήνη-Χρυσοβαλάντου </li>
